homelab/wireguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy
  namespace: wireguard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wg.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: wg.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy
                port:
                  number: 51821
